manifests/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team01-ingress
  namespace: onde-project
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: team01-alb
    # AWS ALB를 사용하기 위한 필수 설정
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/security-groups: sg-0ec5c32c8d4e5cfb5
    #nodeport 연결
    alb.ingress.kubernetes.io/target-type: ip
    
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # 1. 백엔드 API 경로 설정 (예: /api 로 시작하는 요청은 백엔드로)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          # 2. 그 외 모든 경로는 프론트엔드로 전달
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
